--- a/data exploration.Rmd
+++ b/data exploration.Rmd
@@ -149,7 +149,7 @@ tmap_mode("view")
 tm_shape(oil_geom1) + tm_bubbles(size = "all_costs", alpha = 0.5)
 ```
 
-#GRAPHS
+###GRAPHS
 
 ```{r}
 
@@ -157,11 +157,18 @@ tm_shape(oil_geom1) + tm_bubbles(size = "all_costs", alpha = 0.5)
 
 top_ten_cost_bystate <- oil_accidents %>% 
   filter(accident_state == "CA") %>% 
-  mutate(operator_name = as.factor(operator_name)) %>% 
-  arrange(-all_costs) %>% 
+  arrange(desc(all_costs)) %>% 
   head(10) %>% 
-  ggplot(aes(x = operator_name, y = all_costs)) +
-  geom_col()
+  arrange(all_costs) %>% 
+  mutate(report_number = factor(report_number, levels = report_number)) %>%
+  ggplot(aes(x = report_number, y = all_costs/100000)) +
+  geom_col(aes(fill = operator_name)) +
+  theme_bw() +
+  labs(x = "", y = "Total Cost of Accident ($100,000)")+
+  coord_flip() +
+  theme(legend.position = "bottom") +
+  scale_x_discrete(expand = c(0,0), labels = rev(seq(1:10))) +
+  scale_y_continuous(expand = c(0,0), limits = c(0,1500)) 
 
 top_ten_cost_bystate
 
