--- a/data exploration.Rmd
+++ b/data exploration.Rmd
@@ -45,9 +45,8 @@ oil_accidents <- oil_accidents_raw %>%
   unite("time", time, am_or_pm, sep = " ") %>% #bring time back together
   filter(accident_year != 2017) %>% #filter out the 2 2017 observations
   unite("date", year,month,day, sep = "-") %>% #make the date column again
-  mutate(date = as.Date(date)) #change date to date standard internation date format 
-  
-# do we want to go through the offshore accidents and add states to them by looking at the coordinates? Looks like most of them are in louisana 
+  mutate(date = as.Date(date), pipeline_type = case_when(is.na(pipeline_type) ~ "Not Specified",
+  pipeline_type == pipeline_type ~ pipeline_type), accident_city = case_when(pipeline_type == "Not Specified" & is.na(accident_city) ~ "Gulf of Mexico", pipeline_type == "Not Specified" & !is.na(accident_city) ~ accident_city))#change date to date standard internation date format. Chagne NA pipeline types to "Not Specified". Change those "Not Specified" without city names to "Gulf of Mexico" for city name
 
 # report number 20140310 is in mongolia... should be wyoming
 # report number 20140063 is in china... should be in texas
@@ -173,6 +172,20 @@ top_ten_cost_bystate <- oil_accidents %>%
   scale_y_continuous(expand = c(0,0), limits = c(0,1500)) 
 
 top_ten_cost_bystate
+
+```
+
+
+```{r}
+library(treemap)
+
+treemap_data <- oil_accidents_US %>%
+  filter(accident_state != "NA") %>%
+  group_by(accident_state, pipeline_type) %>%
+  summarise(all_costs = sum(all_costs), net_loss_barrels = sum(net_loss_barrels)) %>%
+  ungroup()
+
+treemap(treemap_data, index = c("accident_state", "pipeline_type"), vSize = "net_loss_barrels", vColor = "pipeline_type", type = "categorical")
 
 ```
 
