used correct df

--- a/data exploration.Rmd
+++ b/data exploration.Rmd
@@ -23,7 +23,6 @@ library(sf)
 library(leaflet)
 library(tmap)
 library(kableExtra)
-library(packcircles)
 library(ggplot2)
 
 
@@ -194,7 +193,7 @@ treemap(treemap_data, index = c("accident_state", "pipeline_type"), vSize = "net
 
 ```{r}
 
-liquid_types <- oil_accidents %>%
+liquid_types <- oil_accidents_US %>%
   filter(accident_state == "CA") %>%
   group_by(liquid_type, accident_state) %>%
   summarize(liquid_count = n())
@@ -204,7 +203,7 @@ liquid_types = liquid_types[order(liquid_types$fraction), ]
 liquid_types$ymax = cumsum(liquid_types$fraction)
 liquid_types$ymin = c(0, head(liquid_types$ymax, n=-1))
 
-liquid_donut = ggplot(liquid_types, aes(fill=liquid_type, ymax=ymax, ymin=ymin, xmax=4, xmin=3)) +
+liquid_donut <- ggplot(liquid_types, aes(fill=liquid_type, ymax=ymax, ymin=ymin, xmax=4, xmin=3)) +
      geom_rect() +
      coord_polar(theta="y") +
      xlim(c(0, 4)) +
@@ -212,7 +211,9 @@ liquid_donut = ggplot(liquid_types, aes(fill=liquid_type, ymax=ymax, ymin=ymin, 
      theme(axis.text=element_blank()) +
      theme(axis.ticks=element_blank()) +
      annotate("text", x = 0, y = 0, label = NA) +
-     labs(title="")
+     labs(title="") +
+    guides(fill=guide_legend(title="Liquid Type")) 
+
 
 liquid_donut
 
