--- a/data exploration.Rmd
+++ b/data exploration.Rmd
@@ -40,14 +40,29 @@ oil_accidents_raw <- read_csv("raw_database.csv")
 
 oil_accidents <- oil_accidents_raw %>%
   clean_names() %>% #clean the names snake case
+  
   select(report_number, accident_year:liquid_type, accident_city:cause_category, net_loss_barrels:restart_date_time, property_damage_costs:all_costs) %>% #select relevant columns
   separate(accident_date_time, c("day", "month", "year", "hour", "minute" ,"am_or_pm"), by = c("/", " ")) %>%  #separate the date time column
+  
   unite("time", hour, minute, sep = ":") %>% #bring time back together
+  
   unite("time", time, am_or_pm, sep = " ") %>% #bring time back together
+  
   filter(accident_year != 2017) %>% #filter out the 2 2017 observations
+  
   unite("date", year,month,day, sep = "-") %>% #make the date column again
-  mutate(date = as.Date(date), pipeline_type = case_when(is.na(pipeline_type) ~ "Not Specified",
-  pipeline_type == pipeline_type ~ pipeline_type), accident_city = case_when(pipeline_type == "Not Specified" & is.na(accident_city) ~ "Gulf of Mexico", pipeline_type == "Not Specified" & !is.na(accident_city) ~ accident_city))#change date to date standard internation date format. Chagne NA pipeline types to "Not Specified". Change those "Not Specified" without city names to "Gulf of Mexico" for city name
+  
+  mutate(date = as.Date(date), 
+         pipeline_type = case_when(
+    is.na(pipeline_type) ~ "Not Specified",
+    pipeline_type == pipeline_type ~ pipeline_type), 
+    accident_city = case_when(
+      pipeline_type == "Not Specified" & is.na(accident_city) ~ "Gulf of Mexico", 
+      pipeline_type == "Not Specified" & !is.na(accident_city) ~ accident_city, 
+      is.na(accident_city) & !is.na(accident_county) ~ accident_county,
+      TRUE ~ accident_city))
+
+#change date to date standard international date format. Chagne NA pipeline types to "Not Specified". Change those "Not Specified" without city names to "Gulf of Mexico" for city name. If there is a county name but not a city name, assign the city name as county name. 
 
 # report number 20140310 is in mongolia... should be wyoming
 # report number 20140063 is in china... should be in texas
@@ -61,24 +76,9 @@ write.csv(oil_accidents_US, "cleaned_oil_data")
 ```
 
 
-
-###Exploratory Graphs 
-```{r}
-sum_df <- oil_accidents %>%
-  group_by(accident_year) %>%
-  summarise(count_accidents = length(report_number))
-
-## graph in shiny we will be able to select what state
-ggplot(sum_df, aes(x = accident_year, y = count_accidents)) +
-  geom_point() +
-  geom_line()
-```
-
-
 ###Exploratory Maps 
 
-**Bad map**
-```{r}
+```{r, include = FALSE}
 
 #http://eriqande.github.io/rep-res-web/lectures/making-maps-with-R.html 
 #^link to information on how to make maps with r and how i figured this out
@@ -101,8 +101,8 @@ gg1 <- ggplot() +
 gg1
 ```
 
-**Better map**
-```{r}
+
+```{r, include = FALSE}
 library("rnaturalearth")
 library("rnaturalearthdata")
 
@@ -123,8 +123,8 @@ ggplot(data = world) +
 
 ```
 
-**Better maps**
-```{r}
+
+```{r, include = FALSE}
 #https://rstudio.github.io/leaflet/shapes.html
 leaflet(oil_accidents_US) %>%
   addTiles()  %>% # Adds bg
