--- a/data exploration.Rmd
+++ b/data exploration.Rmd
@@ -172,8 +172,23 @@ tm_shape(oil_geom1, projection = 2163) +
 
 # In the app we will change "CA" to the user selected state. 
 
+top_cost_bystate_expl <- oil_accidents %>% 
+      filter(accident_state == "AK") %>% 
+      filter(accident_county != "NA") %>% 
+      filter(operator_name != "NA") %>% 
+      arrange(desc(all_costs)) %>% 
+      head(10) %>% 
+      arrange(all_costs) %>% 
+      mutate(report_number = factor(report_number, levels = report_number)) 
+      
+state_length <- length(top_cost_bystate_expl$report_number)
+
+top_cost_bystate_expl <- top_cost_bystate_expl %>% 
+  mutate(rank = seq(from = state_length, to = 1, by = -1)) %>% 
+  arrange(rank)
+
 top_ten_cost_bystate <- oil_accidents %>% 
-  filter(accident_state == "CA") %>% 
+  filter(accident_state == "AK") %>% 
   arrange(desc(all_costs)) %>% 
   head(10) %>% 
   arrange(all_costs) %>% 
